Adds bug fix for two-way comparison Updates Readme

--- a/XmlDiffLib.Tests/XmlDiffLib.Tests.csproj
+++ b/XmlDiffLib.Tests/XmlDiffLib.Tests.csproj
@@ -66,6 +66,8 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resources\exampleB.xml" />
+    <Content Include="Resources\exampleA.xml" />
     <Content Include="Resources\HAAR01000.txt" />
     <Content Include="Resources\HAAR01001.txt" />
   </ItemGroup>
