--- a/XmlDiffLib/XmlDiffLib.csproj
+++ b/XmlDiffLib/XmlDiffLib.csproj
@@ -41,11 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnnotatedTree.cs" />
+    <Compile Include="ITreeNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TreeIterators.cs" />
     <Compile Include="XmlDiff.cs" />
+    <Compile Include="XmlTreeNode.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="XmlDiffLib.nuspec" />
+    <None Include="XmlDiffLib.nuspec">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include=".gitignore" />
